@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 a4c401e2941a869b0f7474b2721be87760eb150a ChangeLog
+SHA1 72173fb95d8d3eb94ed9d3a405a497538b9f7948 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 c7d042debff355a6fedd83547215d74f4bfca499 META.yml
-SHA1 2d77aa313fd2655852186e7f529cc42708cea018 Makefile.PL
+SHA1 51512f42ad55cf0bd9826ea958be5e87122dac05 META.yml
+SHA1 1a789132da209adfa2ae9e34cf23c643f92a8ff9 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 fd9f114d40b98c4085cecc1773bbbf05c588a417 lib/Net/FullAuto.pm
+SHA1 6783819daebf484378edd1f45a73249c37828bcd lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTsXfFAAoJEBa/9Pad787EjnQH/2MlV9jFNxvUgMEPowe2qW/+
-qGEJSy68Q5EqTc5a3eBSDIc89bJnhACMVgRquZu1Id00R1eL+PVyxu6uXLe8owAe
-Vq0z/FTiWQcQJjgUoDBrAcRtepDGvhFnd1xfoI4yz59ISC0aNCHiFiiSDpZVNI7h
-UNw/c+qCXY6fi55vVYo4naQ+4sRrp8zhhsIsNGXNdbCVdhw0oeeMsQdbhBQbWu4C
-sdExQBybWVftkTZ3WzbZ8bhynudgehJBKqZCwzjaqOOUcXl1FUYcTU+rFQYQihCy
-JVuHGRTvsAwZzY++vMUZy21d+GK8pN0Dv3DoBV7HjkYl4qHnpQFEtKrdr4rW57A=
-=NpvC
+iQEcBAEBAgAGBQJTsfJPAAoJEBa/9Pad787Es9gH/3OARTGeUfADSEz9NOHYvT8w
+0o6lwqTJwwQ8sXW+wmFmKMYaBuKA3hbFp/jXORYBI23XoNRsfVFuqqd2oU0QRlkF
+kkWoscABK7KbHcCsZL+NWOC5+SqibBlS2YqgQkDIi2TYCGktU6V7uDB4VGXlAz7V
+qSTuvMRZraTCWgMSGvfq0pLmKgiCzUXJP3hkANRf4LXjvo0zA9uzMMqRmii2ceNt
+IOcfnTIqmCX5M4WoVRlYRzRyz/1TMyX2mm7X7s/0Oj4+CUGNgoiAI0NBPd7/rCG8
+eG1kWJXWLSHpc5yH3qmxMuEacVmQHBxnDBW/1GdZq2hXbF8QFFZP0romnfbLHSg=
+=V9w2
 -----END PGP SIGNATURE-----
