@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999928';
+our $VERSION='0.9999999929';
 
 
 use 5.005;
